--- a/src/SerialLoops/Views/MainWindow.axaml
+++ b/src/SerialLoops/Views/MainWindow.axaml
@@ -39,9 +39,14 @@
                 <Button Command="{Binding SearchProjectCommand}" HotKey="{Binding SearchHotKey}"/>
                 <Button Command="{Binding CloseProjectCommand}" HotKey="{Binding CloseProjectKey}"/>
             </StackPanel>
-            <StackPanel Grid.Row="0">
+            <StackPanel Grid.Row="0" HorizontalAlignment="Stretch">
                 <NativeMenuBar Name="MenuBar"/>
-                <toolbar:Toolbar Height="60" Name="ToolBar" HorizontalAlignment="Right"/>
+                <Grid ColumnDefinitions="Auto,*">
+                    <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Margin="20 0"
+                               Text="{Binding OpenProjectName}" />
+                    <toolbar:Toolbar Grid.Row="0" Grid.Column="1" Name="ToolBar" Orientation="Horizontal"
+                                     HorizontalAlignment="Right" DisplayMode="Compact" />
+                </Grid>
             </StackPanel>
             <ContentControl Name="MainContent" Grid.Row="1"/>
         </Grid>
