Finish up the script editor stuff

--- a/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
@@ -107,7 +107,9 @@
                     </TabItem>
 
                     <TabItem Header="{x:Static assets:Strings.Choices}">
+                        <Grid>
 
+                        </Grid>
                     </TabItem>
 
                     <TabItem Header="{x:Static assets:Strings.Map_Characters}">
