--- a/src/SerialLoops/Views/Dialogs/UpdateAvailableDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/UpdateAvailableDialog.axaml
@@ -42,7 +42,8 @@
                         Grid.Row="3" Grid.Column="0" Command="{Binding OpenReleaseLinkCommand}"/>
             <StackPanel Grid.Row="5" Grid.Column="0" Orientation="Horizontal" Spacing="20">
                 <Button Content="{x:Static assets:Strings.Download_from_GitHub}" Command="{Binding OpenReleaseLinkCommand}"/>
-                <Button Content="{x:Static assets:Strings.Skip_Update}" Command="{Binding CloseCommand}" CommandParameter="{Binding #Dialog}"/>
+                <Button Content="{x:Static assets:Strings.Skip_Update}" Command="{Binding CloseCommand}"
+                        CommandParameter="{Binding #Dialog}" IsCancel="True"/>
                 <CheckBox Content="{x:Static assets:Strings.Check_for_Updates}" IsChecked="{Binding CheckForUpdates}"/>
                 <CheckBox Content="{x:Static assets:Strings.Pre_Release_Channel}" IsChecked="{Binding UsePreReleaseChannel}"/>
             </StackPanel>
