--- a/src/SerialLoops/Views/Dialogs/ItemReferencesDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ItemReferencesDialog.axaml
@@ -13,15 +13,16 @@
         x:DataType="vm:ItemReferencesDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.ItemReferencesDialog"
         Icon="/Assets/serial-loops.ico"
-        Title="{Binding Title}">
+        Title="{Binding Title}"
+        Name="Dialog">
     <Panel>
         <controls:AcrylicBorderHandler/>
+        <StackPanel IsVisible="False">
+            <Button IsCancel="True" Command="{Binding CloseCommand}" CommandParameter="{Binding #Dialog}"/>
+        </StackPanel>
 
         <ScrollViewer>
             <Grid RowDefinitions="Auto,*" Width="550">
-                <StackPanel IsVisible="False">
-                    <Button Command="{Binding CloseCommand}" HotKey="{Binding CloseHotKey}"></Button>
-                </StackPanel>
                 <TextBlock Grid.Row="0" Margin="10" FontWeight="Bold" Text="{Binding FoundReferencesLabel}" TextAlignment="Center" />
                 <TreeDataGrid Grid.Row="1" Background="{StaticResource AccentColor}" Margin="10" ShowColumnHeaders="False" CanUserResizeColumns="False" Name="Viewer" Source="{Binding Source}"
                               KeyUp="Viewer_OnKeyUp">
