--- a/src/SerialLoops/Views/Dialogs/PreferencesDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/PreferencesDialog.axaml
@@ -35,8 +35,8 @@
                 </TabControl>
                 <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Spacing="5" Width="500">
                     <StackPanel Orientation="Horizontal" Spacing="5" Margin="5">
-                        <Button Content="{x:Static assets:Strings.Save}" Command="{Binding SaveCommand}" Name="SaveButton"/>
                         <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}" IsCancel="True" Name="CancelButton"/>
+                        <Button Content="{x:Static assets:Strings.Save}" Command="{Binding SaveCommand}" IsDefault="True" Name="SaveButton"/>
                     </StackPanel>
                     <controls:LabelWithIcon Name="RestartRequiredLabel" IsVisible="{Binding RequireRestart}"
                                             Text="{x:Static assets:Strings.Restart_required}" Icon="Warning"/>
